kube/deployment-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment-v1
  labels:
    app: hello
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: laurentiuspilca/istio1-e1:v1
        ports:
        - containerPort: 8080
