kube/deployment-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment-v2
  labels:
    app: hello
    version: v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
        version: v2
    spec:
      containers:
      - name: hello
        image: laurentiuspilca/istio1-e1:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
