kube/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: reviews
  labels:
    app: reviews
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment-v1
  labels:
    app: hello
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
        version: v1
    spec:
      containers:
      - name: hello
        image: laurentiuspilca/istio1-e1:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment-v2
  labels:
    app: hello
    version: v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
        version: v2
    spec:
      containers:
      - name: hello
        image: laurentiuspilca/istio1-e1:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
