kube/vs-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello
spec:
  hosts:
  - hello
  gateways:
  - hello-gateway
  http:
  - route:
    - destination:
        host: hello
        subset: v1
